# agent-ui

./: .audit-baseline.json  .dev-passkey-hints.json.migrated-2026-04-26  .dev.vars.example  .env.example  .gitignore  .mcp.json  .tasks.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  SPEED.md  STREAM5-COMPLETE.md  STREAM5-INDEX.md  STREAM5-QUICK-START.md  astro.config.mjs  biome.json  conversation-report.json  package-lock.json  package.json  playwright.config.ts  schema.tql  substrate.md  todo.json  todo.md  tsconfig.json  vitest.config.ts  whitepaper.md  wrangler.toml
.claude/: README.md  settings.json
.obsidian/: workspace.json
agents/: README.md  analyst.md  asi-builder.md  ceo.md  coder.md  community-director.md  community.md  concierge.md  david.md  designer.md  ehc-officer.md  engineering-director.md  eth-dev.md  founder.md  guard.md  harvester.md  marketing-director.md  nanoclaw.md  ops.md  researcher.md  router.md  sales-director.md  scout.md  service-director.md  teacher.md  testnet-buyer.md  trader.md  tutor.md  writer.md  you.md
audits/: 2026-04-chat-surface.md  2026-04-pay-surface.md  2026-04-program-postmortem.md
cli/: .npmignore  CHANGELOG.md  CLAUDE.md  CREATE-WEBSITE.md  README.md  package.json  tsconfig.json
docs/: 100-lines.md  CLAUDE.md  (+275 more)
python/: README.md  pyproject.toml  uagents-markdown.md
python/examples/: before_and_after.py  blogger.md  price-monitor.md  researcher.md  run_blogger.py  run_price_monitor.py  run_researcher.py  tutor.md
python/one/: __init__.py  agent.py  bundle.py  cli.py  llm.py  parse.py
(+2706 files in other folders)
